dump $ special case from webdav nodes